--- a/index.html
+++ b/index.html
@@ -118,6 +118,82 @@
         </ul>
       </div>
     </section>
+    <section class="wares">
+      <div class="wares__container container">
+        <h2 class="wares__title">Ready to get started with Lemon Wares?</h2>
+        <p class="wares__desc">Choose the package that suits you</p>
+        <div class="wares_row  row center-xs middle-xs">
+          <span class="wares__date">Monthly</span>
+          <button class="wares__toogle"> <span class="wares__round"></span> </button>
+          <span class="wares__date">Yearly</span>
+          <span class="wares__date wares__discount">20%  discount</span>
+        </div>
+        <ul class="wares__list row middle-xs">
+          <li class="row center-xs wares__item wares__item--active">
+            <button class="wares__btn">Basic</button>
+          </li>
+          <li class="row center-xs wares__item">
+            <button class="wares__btn">Premium</button>
+          </li>
+        </ul>
+        <ul class="price row between-xs">
+          <li class="price__item col-md-3 col-sm-5 col-xs-12">
+            <h2 class="price__title">Starter</h2>
+            <p class="price__desc">with all your customers via all conversation channels in one central dashboard.</p>
+            <span class="price__count">$2.80</span>
+            <p class="price__month">Per month</p>
+            <button class="price__btn">Choose this Plan</button>
+            <ul class="price__list price-about">
+              <li class="price-about__item">2GB SSD</li>
+              <li class="price-about__item">10GB Bandwidth</li>
+              <li class="price-about__item">15 Email Accounts</li>
+              <li class="price-about__item">Unlimited Database</li>
+              <li class="price-about__item">4 Subdomains</li>
+              <li class="price-about__item">1 Parked Domain</li>
+              <li class="price-about__item">2 Websites</li>
+              <li class="price-about__item">Free SSL</li>
+              <li class="price-about__item">Softaculous</li>
+            </ul>
+          </li>
+          <li class="price__item col-md-3 col-sm-5 col-xs-12">
+            <h2 class="price__title">Standard</h2>
+            <p class="price__desc">with all your customers via all conversation channels in one central dashboard.</p>
+            <span class="price__count">$4.20</span>
+            <p class="price__month">Per month</p>
+            <button class="price__btn">Choose this Plan</button>
+            <ul class="price__list">
+              <li class="price-about__item">2GB SSD</li>
+              <li class="price-about__item">10GB Bandwidth</li>
+              <li class="price-about__item">15 Email Accounts</li>
+              <li class="price-about__item">Unlimited Database</li>
+              <li class="price-about__item">4 Subdomains</li>
+              <li class="price-about__item">1 Parked Domain</li>
+              <li class="price-about__item">2 Websites</li>
+              <li class="price-about__item">Free SSL</li>
+              <li class="price-about__item">Softaculous</li>
+            </ul>
+          </li>
+          <li class="price__item col-md-3 col-sm-5 col-xs-12">
+            <h2 class="price__title">Suprem</h2>
+            <p class="price__desc">with all your customers via all conversation channels in one central dashboard.</p>
+            <span class="price__count">$7.00</span>
+            <p class="price__month">Per month</p>
+            <button class="price__btn">Choose this Plan</button>
+            <ul class="price__list">
+              <li class="price-about__item">2GB SSD</li>
+              <li class="price-about__item">10GB Bandwidth</li>
+              <li class="price-about__item">15 Email Accounts</li>
+              <li class="price-about__item">Unlimited Database</li>
+              <li class="price-about__item">4 Subdomains</li>
+              <li class="price-about__item">1 Parked Domain</li>
+              <li class="price-about__item">2 Websites</li>
+              <li class="price-about__item">Free SSL</li>
+              <li class="price-about__item">Softaculous</li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 <script src="js/main.js"></script>
 
