--- a/index.html
+++ b/index.html
@@ -194,6 +194,36 @@
         </ul>
       </div>
     </section>
+    <section class="customers">
+      <div class="customers__container container">
+        <div class="customers__row row between-xs">
+          <div class="customers__col col-md-6 col-sm-12 col-xs-12">
+            <h2 class="customers__title">Real Stories from Real Customers</h2>
+            <p class="customers__desc">Get inspired by these stories.</p>
+            <div class="customers__box about-customers">
+              <img class="about-customers__img" src="img/cli.png" alt="cli-img">
+              <p class="about-customers__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elem</p>
+              <h3 class="about-customers__name">Floyd Miles</h3>
+              <p class="about-customers__adrres">Vice President, CLI</p>
+            </div>
+          </div>
+          <div class="customers__col col-md-6 col-sm-12 col-xs-12">
+            <div class="customers__box customers__box-big about-customers">
+              <img class="about-customers__img" src="img/jpnl.png" alt="jpnl-img">
+              <p class="about-customers__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elem</p>
+              <h3 class="about-customers__name">Jane Cooper</h3>
+              <p class="about-customers__adrres">CEO, JPNL</p>
+            </div>
+            <div class="customers__box about-customers customers__box-small">
+              <img class="about-customers__img" src="img/branding.png" alt="branding-img">
+              <p class="about-customers__desc">LemonWares saved our time in Hosting my company page.</p>
+              <h3 class="about-customers__name">Kristin Watson</h3>
+              <p class="about-customers__adrres">Co-Founder, LeeveOn Branding</p>
+            </div>
+          </div>  
+        </div>
+      </div>
+    </section>
   </main>
 <script src="js/main.js"></script>
 
