--- a/index.html
+++ b/index.html
@@ -224,6 +224,32 @@
         </div>
       </div>
     </section>
+    <section class="web-sites">
+      <div class="web-sites__container container">
+        <div class="web-sites__row row between-xs">
+          <div class="web-sites__col col-md-5">
+            <h2 class="web-sites__title">We serve over 100 Nigerian Websites</h2>
+            <p class="web-sites__desc">Connect LemonWares with your favourite tools that you use daily and keep things on track.</p>
+          </div>
+          <ul class="web-sites__col web-sites__list col-md-6 row between-xs middle-xs">
+            <li class="web-sites__item col-md-4 col-sm-6 col-xs-6"><img class="web-sites__img" src="img/jpnl.png" alt="web-sites-img"></li>
+            <li class="web-sites__item col-md-4 col-sm-6 col-xs-6"><img class="web-sites__img" src="img/korane.png" alt="web-sites-img"></li>
+            <li class="web-sites__item col-md-4 col-sm-6 col-xs-6"><img class="web-sites__img" src="img/chaida.png" alt="web-sites-img"></li>
+            <li class="web-sites__item col-md-4 col-sm-6 col-xs-6"><img class="web-sites__img" src="img/branding.png" alt="web-sites-img"></li>
+            <li class="web-sites__item col-md-4 col-sm-6 col-xs-6"><img class="web-sites__img" src="img/jranglasses.png" alt="web-sites-img"></li>
+            <li class="web-sites__item col-md-4 col-sm-6 col-xs-6"><img class="web-sites__img" src="img/cli.png" alt="web-sites-img"></li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="awesome">
+      <div class="container">
+        <div class="awesome__box make-website">
+          <h2 class="make-website__title">We're here to make your website awesome.</h2>
+          <a class="make-website__link" href="tel:+998997262347">Get  in touch with us</a>
+        </div>
+      </div>
+    </section>
   </main>
 <script src="js/main.js"></script>
 
