--- a/index.html
+++ b/index.html
@@ -251,6 +251,88 @@
       </div>
     </section>
   </main>
+  <footer class="footer">
+    <div class="footer__container container">
+      <div class="footer__row row">
+        <div>
+          <a class="footer__logo-link" href="index.html">
+            <img class="footer__logo" src="img/footer-logo.png" alt="footer-logo">
+          </a>
+          <p class="footer__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis, lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elem</p>
+          <p class="footer__copryting">Built by Jeremiah with love in Lagos. Copyright 2021</p>
+        </div>
+        <div class="footer__row row between-xs">
+          <div>
+            <ul class="footer__list">
+              <li class="footer__item about-footer">
+                <h2 class="about-footer__title">Service</h2>
+              </li>
+              <li class="footer__item about-footer">
+                <a class="about-footer__link" href="#">Domain</a>
+              </li>
+              <li class="footer__item about-footer">
+                <a class="about-footer__link" href="#">Shared Hosting</a>
+              </li>
+              <li class="footer__item about-footer">
+                <a class="about-footer__link" href="#">Cloud Hosting</a>
+              </li>
+              <li class="footer__item about-footer">
+                <a class="about-footer__link" href="#">Private Hosting</a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <ul class="footer__list">
+              <li class="footer__item about-footer">
+                <h2 class="about-footer__title">Hosting</h2>
+              </li>
+              <li class="footer__item about-footer">
+                <a class="about-footer__link" href="#">Cheap Hosting</a>
+              </li>
+              <li class="footer__item about-footer">
+                <a class="about-footer__link" href="#">Hosting Wordpress</a>
+              </li>
+              <li class="footer__item about-footer">
+                <a class="about-footer__link" href="#">Email Hosting</a>
+              </li>
+              <li class="footer__item about-footer">
+                <a class="about-footer__link" href="#">Hosting Unlimited</a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <ul class="footer__list">
+              <li class="footer__item about-footer">
+                <h2 class="about-footer__title">Company</h2>
+              </li>
+              <li class="footer__item about-footer">
+                <a class="about-footer__link" href="#">About</a>
+              </li>
+              <li class="footer__item about-footer">
+                <a class="about-footer__link" href="#">Career</a>
+              </li>
+              <li class="footer__item about-footer">
+                <a class="about-footer__link" href="#">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <ul class="footer__list">
+              <li class="footer__item about-footer">
+                <h2 class="about-footer__title">Help</h2>
+              </li>
+              <li class="footer__item about-footer">
+                <a class="about-footer__link" href="#">FAQ</a>
+              </li>
+              <li class="footer__item about-footer">
+                <a class="about-footer__link" href="#">Help support</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 <script src="js/main.js"></script>
 
 </body>
